2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_internal.py:
	  I'm sorry, I meant pre-2.6

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_internal.py:
	  Pre-2.5 __package__ is not a module variable.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Don't complain about not finding real modules when they start
	  with underscore - they probably do not want to be found.
	* test/expected/test_zope_interface_q:
	  Adjust output.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Allow passing a config to _check() and use it.
	* test/test_internal.py:
	  Ignore standard library.  We don't care about xml.sax

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Report warning when from X import * imports symbols that
	  get shadowed by later class definitions.
	  In _BUILD_CLASS, looks to me like we should push the name
	  on the stack, not the dict.
	* pychecker/msgs.py:
	  Add the error message.
	* pychecker/pcmodules.py:
	  Track where imports happen in imported instance variable.
	  Add addImported method.
	* test_todo/import44.py (deleted):
	* test_todo/test44.py (deleted):
	* test_input/import44.py:
	* test_input/test44.py:
	* test_expected/test44:
	  Since the code now gives a useful hint about what's wrong in this
	  test (a class definition shadowing an import through *), put this
	  test back in the test suite

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Track the aliased name of a global reference, so we track
	  path when we do from os import path
	* pychecker/pcmodules.py:
	  Track aliases in Code.modules keys, instead of fully qualified
	  names.
	  Add a codes list member to Code, to analyze Code objects in
	  unit tests for debugging.
	* pychecker/warn.py:
	  Add to PyCheckerModule.codes.